# pycuber

./: LICENSE  README.md  pyproject.toml
src/pycuber/: __init__.py  app.py  scrambler.py
