[project]
name = "pycuber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.70.0",
    "kociemba",
]

[project.scripts]
pycuber = "pycuber:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]
